# bc-hash

./: .clang-tidy  .gitignore  CHANGELOG.md  README.md  cppcheck-suppressions.txt  meson.build  meson_options.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright
docs/: benchmarks.md
fuzzing/: fuzz_bc_hash_cli_parse.c  fuzz_bc_hash_verify_parse.c  meson.build
fuzzing/corpus/bc_hash_verify_parse/: seed_md5len.txt  seed_ndjson.txt  seed_sha256sum.txt
include/internal/: bc_hash_cli_internal.h  bc_hash_diff_internal.h  bc_hash_dirent_internal.h  bc_hash_discovery_internal.h  bc_hash_dispatch_decision_internal.h  bc_hash_error_internal.h  bc_hash_filter_internal.h  bc_hash_output_internal.h  bc_hash_reader_internal.h  bc_hash_strings_internal.h  bc_hash_throughput_internal.h  bc_hash_types_internal.h  bc_hash_verify_internal.h  bc_hash_worker_internal.h
scripts/: bench.sh  build-pgo.sh
src/: bc_hash_main.c  meson.build
src/bench/: bc_hash_dispatch_decision.c  bc_hash_throughput.c  bc_hash_throughput_cache.c
src/cli/: bc_hash_cli_spec.c
src/diff/: bc_hash_diff.c
src/discovery/: bc_hash_dirent.c  bc_hash_discovery_glob.c  bc_hash_discovery_walk.c  bc_hash_discovery_walk_parallel.c
src/error/: bc_hash_error_collector.c
src/filter/: bc_hash_filter.c
src/output/: bc_hash_output_hrbl.c  bc_hash_output_json.c  bc_hash_output_simple.c
src/verify/: bc_hash_verify_parse.c  bc_hash_verify_run.c
src/worker/: bc_hash_worker_batch_sync.c  bc_hash_worker_batch_uring.c  bc_hash_worker_dispatch.c  bc_hash_worker_reader.c
tests/: meson.build  test_bc_hash_check.c  test_bc_hash_cli_spec_unit.c  test_bc_hash_diff.c  test_bc_hash_dispatch_decision.c  test_bc_hash_end_to_end.c  test_bc_hash_error_unit.c  test_bc_hash_filter.c  test_bc_hash_filter_unit.c  test_bc_hash_output_json.c  test_bc_hash_output_unit.c  test_bc_hash_reader_ring_growth.c  test_bc_hash_reader_uring_stress.c  test_bc_hash_throughput.c  test_bc_hash_verify_parse_unit.c
